--- a/index.html
+++ b/index.html
@@ -16,13 +16,38 @@
                     <img src="./images/logo.svg" alt="logo">
                     <span>Abito</span>
                 </div>
-                <div class="header-controls">2</div>
+                <div class="header-controls">
+                    <button class = "btn btn-outline">Вход и регистрация</button>
+                    <button class = "btn btn-primary">Подать объявление</button>
+                </div>
+
+                <div class="header-burger">
+                    <img src="./images/burger.svg" alt="burger">
+                </div>
+
             </div>
         </div> 
 
     </header>
-    <div id = 'search'>search</div>
     <!--what makes this page unice-->
-    <main id = 'content'>content</main>
+    <main id = 'content'>
+        <section class="search">
+            <div class="container">
+                <div class="search-box">
+                    <input type="text">
+                    <button class="btn btn-primary search-btn"> 
+                        <img class="search-btn_icon" src="./images/lupe.svg" alt="Sign of search">
+                        <span class="search-btn_text">Найти</span>
+                    </button>
+
+                </div>
+            </div>
+        </section>
+        <section class="content">
+            <div class="container">
+                Content
+            </div>
+        </section>
+    </main>
 </body>
 </html>
