lesson 3 - base of js
array was added and function for search was written

--- a/index.html
+++ b/index.html
@@ -44,12 +44,11 @@
             </div>
         </section>
         <section class="content">
-            <div class="container">
                 <div class="content-box">
                     <div class="content-main">
                         <h2 class="content-main_title">Рекомендации для вас</h2>
                         <div class="content-main_list">
-                            <a href="/product1.html" class="content-main_list-item">
+                            <!--<a href="/product1.html" class="content-main_list-item">
                                <div class="content-main_list-item--img">
                                     <img src="./images/product1.png" alt="photo of product1">
                                </div> 
@@ -137,7 +136,7 @@
                                      <span class = "content-main_list-item--adress">adress</span>                          
                                      <span class = "content-main_list-item--time">date and time of publ</span>
                                 </div>
-                             </a>
+                             </a>-->
                                                            
                         </div>
                     </div>
@@ -186,7 +185,6 @@
                       
                     </div>
                 </div>
-            </div>
         </section>
     </main>
 </body>
